# quipubase

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  app.html  app.py  data.md  docker-compose.yml  index.html  main.py  nginx.conf  openapi.json  package.json  pyproject.toml  requirements.txt  test_app.py
.data/3c64eb8173367f193597a6031711f5a1434e3038e8d6134c9ab3b99be3606ddb/: schema.json
app/: index.html  package.json
client/python/: README.md
data/meta/: 000008.sst  000013.sst  000510.sst  000668.sst  IDENTITY  LOG  LOG.old.1748407879606659  LOG.old.1748408006191414  LOG.old.1748408148879434  LOG.old.1748408150320969  LOG.old.1748408202630038  LOG.old.1748408204649645  LOG.old.1748408206260227  LOG.old.1748408207760119  LOG.old.1748409186757006  LOG.old.1748409188255728  LOG.old.1748409254539451  LOG.old.1748409764101793  LOG.old.1748409765508784  LOG.old.1748409766804268  LOG.old.1748409872137087  LOG.old.1748409873541396  LOG.old.1748409874824915  LOG.old.1748409876107663  LOG.old.1748409877374128  LOG.old.1748409878628865  LOG.old.1748409881394925  LOG.old.1748409882682588  LOG.old.1748409883946371  LOG.old.1748409885220857  LOG.old.1748409886505232  LOG.old.1748409888245787  LOG.old.1748409975008105  LOG.old.1748410008021254  LOG.old.1748410009437866  LOG.old.1748410160012194  LOG.old.1748410161375995  LOG.old.1748410244486968  LOG.old.1748410264698656  LOG.old.1748410268850964  (+469 more)
docs/: index.md
lib/python/: main.py
lib/typescript/: index.ts  package.json
prisma/: schema.prisma
quipubase/: __init__.py  api.py  classgen.py  collection.py  const.py  event.py  exchange.py  manager.py  queue.py  state.py  typedefs.py  utils.py
quipubase/api/: __init__.py
quipubase/auth/: __init__.py  router.py
quipubase/cache/: __init__.py  cache.py  pubsub.py
quipubase/chat/: route.py  service.py
quipubase/collections/: __init__.py  router.py  service.py  typedefs.py
quipubase/content/: __init__.py  service.py  typedefs.py
quipubase/data/: __init__.py  collection.py  collection_manager.py  create_class.py  event.py  responses.py
quipubase/docs/: __init__.py  _base.py  anydocs.py  (+11 more)
scripts/: activate-poetry-venv.sh  chatbot  db.sh  devcontainer.sh  entrypoint.sh  load_model.sh  mount.sh  pyhash.py  search  test_music.sh
tests/: __init__.py  conftest.py  test_collection.py  test_collection_and_exchange.py  test_collections_api.py  test_events.py  test_exchange.py  test_main.py  test_prod.py  test_pubsub_api.py  test_sse_connect.py  test_transcriptions.py  test_vector.py
web/: auto-imports.d.ts  components.d.ts  index.html  package.json  unocss.config.ts  vite.config.ts
(+580 files in other folders)
